--- a/lab/log-message-collection/package.json
+++ b/lab/log-message-collection/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "logolite": "^0.1.5",
     "winston": "^2.4.0"
   },
   "devDependencies": {
