--- a/lab/log-message-collection/package.json
+++ b/lab/log-message-collection/package.json
@@ -4,7 +4,7 @@
   "description": "Log message collection example",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/tdd/*-test.js"
+    "test": "node_modules/.bin/mocha test/bdd/*-test.js"
   },
   "author": "pnhung177",
   "license": "MIT",
@@ -18,7 +18,7 @@
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "debug": "^3.1.0",
-    "devebot-test": "^0.2.1",
+    "devebot-test": "^0.2.2",
     "lodash": "^4.17.4",
     "mocha": "^4.1.0",
     "node-fetch": "^1.7.3"
